--- a/.project
+++ b/.project
@@ -33,92 +33,92 @@
 		<link>
 			<name>Drivers/STM32F0xx_HAL_Driver/stm32f0xx_hal.c</name>
 			<type>1</type>
-			<location>C:/Users/Christopher Graham/STM32Cube/Repository/STM32Cube_FW_F0_V1.11.3/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal.c</location>
+			<locationURI>PARENT-3-PROJECT_LOC/STM32Cube/Repository/STM32Cube_FW_F0_V1.11.3/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal.c</locationURI>
 		</link>
 		<link>
 			<name>Drivers/STM32F0xx_HAL_Driver/stm32f0xx_hal_adc.c</name>
 			<type>1</type>
-			<location>C:/Users/Christopher Graham/STM32Cube/Repository/STM32Cube_FW_F0_V1.11.3/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_adc.c</location>
+			<locationURI>PARENT-3-PROJECT_LOC/STM32Cube/Repository/STM32Cube_FW_F0_V1.11.3/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_adc.c</locationURI>
 		</link>
 		<link>
 			<name>Drivers/STM32F0xx_HAL_Driver/stm32f0xx_hal_adc_ex.c</name>
 			<type>1</type>
-			<location>C:/Users/Christopher Graham/STM32Cube/Repository/STM32Cube_FW_F0_V1.11.3/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_adc_ex.c</location>
+			<locationURI>PARENT-3-PROJECT_LOC/STM32Cube/Repository/STM32Cube_FW_F0_V1.11.3/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_adc_ex.c</locationURI>
 		</link>
 		<link>
 			<name>Drivers/STM32F0xx_HAL_Driver/stm32f0xx_hal_can.c</name>
 			<type>1</type>
-			<location>C:/Users/Christopher Graham/STM32Cube/Repository/STM32Cube_FW_F0_V1.11.3/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_can.c</location>
+			<locationURI>PARENT-3-PROJECT_LOC/STM32Cube/Repository/STM32Cube_FW_F0_V1.11.3/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_can.c</locationURI>
 		</link>
 		<link>
 			<name>Drivers/STM32F0xx_HAL_Driver/stm32f0xx_hal_cortex.c</name>
 			<type>1</type>
-			<location>C:/Users/Christopher Graham/STM32Cube/Repository/STM32Cube_FW_F0_V1.11.3/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_cortex.c</location>
+			<locationURI>PARENT-3-PROJECT_LOC/STM32Cube/Repository/STM32Cube_FW_F0_V1.11.3/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_cortex.c</locationURI>
 		</link>
 		<link>
 			<name>Drivers/STM32F0xx_HAL_Driver/stm32f0xx_hal_dma.c</name>
 			<type>1</type>
-			<location>C:/Users/Christopher Graham/STM32Cube/Repository/STM32Cube_FW_F0_V1.11.3/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_dma.c</location>
+			<locationURI>PARENT-3-PROJECT_LOC/STM32Cube/Repository/STM32Cube_FW_F0_V1.11.3/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_dma.c</locationURI>
 		</link>
 		<link>
 			<name>Drivers/STM32F0xx_HAL_Driver/stm32f0xx_hal_exti.c</name>
 			<type>1</type>
-			<location>C:/Users/Christopher Graham/STM32Cube/Repository/STM32Cube_FW_F0_V1.11.3/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_exti.c</location>
+			<locationURI>PARENT-3-PROJECT_LOC/STM32Cube/Repository/STM32Cube_FW_F0_V1.11.3/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_exti.c</locationURI>
 		</link>
 		<link>
 			<name>Drivers/STM32F0xx_HAL_Driver/stm32f0xx_hal_flash.c</name>
 			<type>1</type>
-			<location>C:/Users/Christopher Graham/STM32Cube/Repository/STM32Cube_FW_F0_V1.11.3/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_flash.c</location>
+			<locationURI>PARENT-3-PROJECT_LOC/STM32Cube/Repository/STM32Cube_FW_F0_V1.11.3/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_flash.c</locationURI>
 		</link>
 		<link>
 			<name>Drivers/STM32F0xx_HAL_Driver/stm32f0xx_hal_flash_ex.c</name>
 			<type>1</type>
-			<location>C:/Users/Christopher Graham/STM32Cube/Repository/STM32Cube_FW_F0_V1.11.3/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_flash_ex.c</location>
+			<locationURI>PARENT-3-PROJECT_LOC/STM32Cube/Repository/STM32Cube_FW_F0_V1.11.3/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_flash_ex.c</locationURI>
 		</link>
 		<link>
 			<name>Drivers/STM32F0xx_HAL_Driver/stm32f0xx_hal_gpio.c</name>
 			<type>1</type>
-			<location>C:/Users/Christopher Graham/STM32Cube/Repository/STM32Cube_FW_F0_V1.11.3/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_gpio.c</location>
+			<locationURI>PARENT-3-PROJECT_LOC/STM32Cube/Repository/STM32Cube_FW_F0_V1.11.3/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_gpio.c</locationURI>
 		</link>
 		<link>
 			<name>Drivers/STM32F0xx_HAL_Driver/stm32f0xx_hal_i2c.c</name>
 			<type>1</type>
-			<location>C:/Users/Christopher Graham/STM32Cube/Repository/STM32Cube_FW_F0_V1.11.3/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_i2c.c</location>
+			<locationURI>PARENT-3-PROJECT_LOC/STM32Cube/Repository/STM32Cube_FW_F0_V1.11.3/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_i2c.c</locationURI>
 		</link>
 		<link>
 			<name>Drivers/STM32F0xx_HAL_Driver/stm32f0xx_hal_i2c_ex.c</name>
 			<type>1</type>
-			<location>C:/Users/Christopher Graham/STM32Cube/Repository/STM32Cube_FW_F0_V1.11.3/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_i2c_ex.c</location>
+			<locationURI>PARENT-3-PROJECT_LOC/STM32Cube/Repository/STM32Cube_FW_F0_V1.11.3/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_i2c_ex.c</locationURI>
 		</link>
 		<link>
 			<name>Drivers/STM32F0xx_HAL_Driver/stm32f0xx_hal_pwr.c</name>
 			<type>1</type>
-			<location>C:/Users/Christopher Graham/STM32Cube/Repository/STM32Cube_FW_F0_V1.11.3/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_pwr.c</location>
+			<locationURI>PARENT-3-PROJECT_LOC/STM32Cube/Repository/STM32Cube_FW_F0_V1.11.3/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_pwr.c</locationURI>
 		</link>
 		<link>
 			<name>Drivers/STM32F0xx_HAL_Driver/stm32f0xx_hal_pwr_ex.c</name>
 			<type>1</type>
-			<location>C:/Users/Christopher Graham/STM32Cube/Repository/STM32Cube_FW_F0_V1.11.3/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_pwr_ex.c</location>
+			<locationURI>PARENT-3-PROJECT_LOC/STM32Cube/Repository/STM32Cube_FW_F0_V1.11.3/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_pwr_ex.c</locationURI>
 		</link>
 		<link>
 			<name>Drivers/STM32F0xx_HAL_Driver/stm32f0xx_hal_rcc.c</name>
 			<type>1</type>
-			<location>C:/Users/Christopher Graham/STM32Cube/Repository/STM32Cube_FW_F0_V1.11.3/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_rcc.c</location>
+			<locationURI>PARENT-3-PROJECT_LOC/STM32Cube/Repository/STM32Cube_FW_F0_V1.11.3/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_rcc.c</locationURI>
 		</link>
 		<link>
 			<name>Drivers/STM32F0xx_HAL_Driver/stm32f0xx_hal_rcc_ex.c</name>
 			<type>1</type>
-			<location>C:/Users/Christopher Graham/STM32Cube/Repository/STM32Cube_FW_F0_V1.11.3/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_rcc_ex.c</location>
+			<locationURI>PARENT-3-PROJECT_LOC/STM32Cube/Repository/STM32Cube_FW_F0_V1.11.3/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_rcc_ex.c</locationURI>
 		</link>
 		<link>
 			<name>Drivers/STM32F0xx_HAL_Driver/stm32f0xx_hal_tim.c</name>
 			<type>1</type>
-			<location>C:/Users/Christopher Graham/STM32Cube/Repository/STM32Cube_FW_F0_V1.11.3/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_tim.c</location>
+			<locationURI>PARENT-3-PROJECT_LOC/STM32Cube/Repository/STM32Cube_FW_F0_V1.11.3/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_tim.c</locationURI>
 		</link>
 		<link>
 			<name>Drivers/STM32F0xx_HAL_Driver/stm32f0xx_hal_tim_ex.c</name>
 			<type>1</type>
-			<location>C:/Users/Christopher Graham/STM32Cube/Repository/STM32Cube_FW_F0_V1.11.3/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_tim_ex.c</location>
+			<locationURI>PARENT-3-PROJECT_LOC/STM32Cube/Repository/STM32Cube_FW_F0_V1.11.3/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_tim_ex.c</locationURI>
 		</link>
 	</linkedResources>
 </projectDescription>
